WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159725
WebKit2 shouldn't signal custom protocol clients from the NSURLConnection loader thread.
https://bugs.webkit.org/show_bug.cgi?id=159725
Summary
WebKit2 shouldn't signal custom protocol clients from the NSURLConnection loa...
Chris Dumez
Reported
2016-07-13 10:18:09 PDT
WebKit2 shouldn't signal custom protocol clients from the NSURLConnection loader thread.
Attachments
Patch
(5.54 KB, patch)
2016-07-13 10:40 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.60 KB, patch)
2016-07-13 12:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.61 KB, patch)
2016-07-13 12:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-07-13 10:18:26 PDT
<
rdar://problem/27323131
>
Chris Dumez
Comment 2
2016-07-13 10:40:17 PDT
Created
attachment 283543
[details]
Patch
WebKit Commit Bot
Comment 3
2016-07-13 10:41:37 PDT
Attachment 283543
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/CustomProtocols/Cocoa/CustomProtocolManagerCocoa.mm:69: Should not have spaces around = in property synthesis. [whitespace/property] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 4
2016-07-13 12:31:37 PDT
Comment on
attachment 283543
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283543&action=review
> Source/WebKit2/NetworkProcess/CustomProtocols/Cocoa/CustomProtocolManagerCocoa.mm:60 > + CFRunLoopRef _initializationRunLoop;
I'd use a RetainPtr for this.
> Source/WebKit2/NetworkProcess/CustomProtocols/Cocoa/CustomProtocolManagerCocoa.mm:95 > + _initializationRunLoop = CFRunLoopGetCurrent();
This needs to be retained.
Chris Dumez
Comment 5
2016-07-13 12:47:04 PDT
Created
attachment 283561
[details]
Patch
Andy Estes
Comment 6
2016-07-13 12:51:17 PDT
Comment on
attachment 283561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283561&action=review
> Source/WebKit2/NetworkProcess/CustomProtocols/Cocoa/CustomProtocolManagerCocoa.mm:197 > - CFRunLoopPerformBlock([NSURLConnection resourceLoaderRunLoop], kCFRunLoopDefaultMode, block); > - CFRunLoopWakeUp([NSURLConnection resourceLoaderRunLoop]); > + CFRunLoopPerformBlock(protocol.initializationRunLoop, kCFRunLoopDefaultMode, block); > + CFRunLoopWakeUp(protocol.initializationRunLoop);
Nit: It'd be slightly nicer to store protocol.initializationRunLoop in a local variable.
Chris Dumez
Comment 7
2016-07-13 12:53:19 PDT
Comment on
attachment 283561
[details]
Patch I'll fix the nit.
Chris Dumez
Comment 8
2016-07-13 12:54:03 PDT
Created
attachment 283562
[details]
Patch
Chris Dumez
Comment 9
2016-07-13 13:01:58 PDT
Comment on
attachment 283562
[details]
Patch Clearing flags on attachment: 283562 Committed
r203174
: <
http://trac.webkit.org/changeset/203174
>
Chris Dumez
Comment 10
2016-07-13 13:02:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug